--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,21 @@ body {
     -moz-osx-font-smoothing: grayscale;
     background-image: url(./components/assets/triangle-mosaic.png);
   }
+
+  .hero {
+    background-image: url(/client/public/assets/Section_background_1.jpg);
+    background-size: cover!important;
+	width: 100%;
+	height: 100%;
+};
+
+.fs-18 {
+    font-size: 18px;
+};
+
+.black-font {
+    color: black;
+}
   
   code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -63,7 +78,7 @@ h6 {
 }
 
 .brand-name  {
-  font-size: 1.5rem !important;
+  font-size: 1.00rem !important;
 }
 
 /* Spaceing */
@@ -76,6 +91,34 @@ h6 {
   margin-bottom: 50px;
 }
 
+.mb15 {
+  margin-bottom: 15px;
+}
+
+.mb10 {
+  margin-bottom: 10px;
+}
+.mb0 {
+  margin-bottom: 0px;
+}
+
+.overflow {
+  display: inline;
+  overflow: auto!important;
+  max-height: 185px;
+}
+
+
+.card-content {
+  max-height: 350px;
+}
+
+[type="radio"]:checked+span:after, [type="radio"].with-gap:checked+span:after {
+  background-color: #00edfc !important;
+}
+[type="radio"]:checked+span:after, [type="radio"].with-gap:checked+span:before, [type="radio"].with-gap:checked+span:after {
+  border: 2px solid #00edfc !important;
+}
 
 /* .clearfix::after {
   content: "";
