Updated css and registeModal

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -114,12 +114,13 @@ h6 {
 }
 
 .shoe-card {
+  min-height: 392px;
   max-height:451px;
 }
 
 .shoes {
-  display: inline;
-  max-height: 208px!important;
+  min-height: 210px;
+  
 }
 
 [type="radio"]:checked+span:after, [type="radio"].with-gap:checked+span:after {
